--- a/index.html
+++ b/index.html
@@ -9,7 +9,30 @@
     <title>My Portfolio</title>
   </head>
   <body>
-    <h1>ポートフォリオサイト</h1>
+    <h1>五十嵐梨玖</h1>
+    <h2>Igarashi Riku</h2>
+
+    <div class="peasonal">
+      <a
+        href="https://www.eng.hokudai.ac.jp/labo/photonic/index-j.html"
+        class="peasonalData"
+        >研究室</a
+      >
+      <a href="https://godfield.net/" class="peasonalData">好きなゲーム</a>
+    </div>
+
+    <div>
+      <h3>出身：北海道</h4>
+      <h3>趣味：旅行</h4>
+    </div>
+
+    <div class="slider">
+      <a  class="arrow arrow-left" onclick="goBack()"></a>
+      <img src="S__50946079.jpg" id="slideImg" />
+      <a  class="arrow arrow-right" onclick="goForward()"></a>
+      <p id="caption"></p>
+    </div>
+
     <script src="main.js"></script>
   </body>
 </html>
